fix various errors on fpln page, set #000 as bg color for MFD instrument

--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/OANS/OansNdUi.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/OANS/OansNdUi.scss
@@ -8,10 +8,10 @@
   font-style: normal;
 }
 
-$display-mfd-dark-grey: #3c3c3c;
+$display-mfd-darker-grey: #3c3c3c;
 
 .oans-info-box {
-  background-color: $display-mfd-dark-grey;
+  background-color: $display-mfd-darker-grey;
   border: 2px outset $display-light-grey;
   padding: 9px 12px 5px 12px;
 }
