- import Arinc429Word from fbw-sdk (remove copy from @shared) - match slats+flaps position dots to actual positions - remove speed tape outline right - remove spaces in FMA E2 cell (i.e. 1FD2 instead of 1 FD 2) - fix LS info box position (push a little bit upwards) - integrate PR #8235 (FMA pos. update) & #8214 (move trans alt/lvl to arinc bus) - make tens of digital altitude readout font smaller & push to right - altitude tape now listens to baro corrected altitude

--- a/fbw-a380x/src/systems/instruments/src/PFD/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/PFD/style.scss
@@ -111,12 +111,20 @@
   font-size: 5.5px;
 }
 
+.FontMediumSmaller {
+  font-size: 5.4px;
+}
+
 .FontSmall {
   font-size: 5px;
 }
 
 .FontSmallest {
   font-size: 4.5px;
+}
+
+.FontTinyToSmallest {
+  font-size: 4.3px;
 }
 
 .FontTiny {
