--- a/fbw-a380x/src/systems/instruments/src/Common/definitions.scss
+++ b/fbw-a380x/src/systems/instruments/src/Common/definitions.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Ecam';
-  src: url(/Fonts/ECAMFontRegular.ttf);
+  src: url(/Fonts/FBW-Display-EIS-A380.ttf);
 }
 
 $font-size-small: 14px;
