--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/OANS/OansNdUi.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/OANS/OansNdUi.scss
@@ -3,7 +3,7 @@
 @font-face {
   font-family: "Ecam";
   //noinspection CssUnknownTarget
-  src: url("/Fonts/ECAMFontRegular.ttf") format("truetype");
+  src: url("/Fonts/FBW-Display-EIS-A380.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
