implement QNH pre-selection

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/html_ui/Pages/VCockpit/Instruments/LegacyA380X/FCU/A380_FCU.css
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/html_ui/Pages/VCockpit/Instruments/LegacyA380X/FCU/A380_FCU.css
@@ -92,6 +92,12 @@
   font-size: 400px;
 }
 
+:root #PreSelBaroValue {
+  font-family: Digital;
+  text-anchor: end;
+  letter-spacing: 0px;
+}
+
 :root line {
   stroke: var(--main-display-colour);
   stroke-width: 5;
