airport auto-load, runway end label fix, btv display, FMS selected runway marker

--- a/fbw-a380x/src/systems/instruments/src/ND/oans-styles.scss
+++ b/fbw-a380x/src/systems/instruments/src/ND/oans-styles.scss
@@ -86,8 +86,21 @@
   background-size: cover;
 }
 
+.oanc-label-style-runway-end-fms-selected {
+  width: 0px;
+  height: 0px;
+  border-style: solid;
+  border-width: 0 50px 30px 50px;
+  border-color: transparent transparent $display-green transparent;
+  transform: rotate(0deg);
+}
+
 .oanc-label-style-runway-axis {
   color: $display-white;
+}
+
+.oanc-label-style-runway-axis-fms-selected {
+  color: $display-green;
 }
 
 .oanc-button {
@@ -345,6 +358,7 @@ path.rounded {
   fill: none;
   stroke-width: 3.5px;
 }
+
 .shadow text {
   stroke-width: 1.5px;
 }
@@ -390,10 +404,12 @@ $font-factor: 5;
   text-align: start;
   text-anchor: start;
 }
+
 .MiddleAlign {
   text-align: center;
   text-anchor: middle;
 }
+
 .EndAlign {
   text-align: end;
   text-anchor: end;
