add first interactive BTV functionality

--- a/fbw-a380x/src/systems/instruments/src/ND/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/ND/style.scss
@@ -25,6 +25,7 @@
   height: 768px;
   background: transparent;
   font-family: "Ecam", monospace !important;
+  pointer-events: none;
 }
 
 .nd-canvas-map {
