--- a/fbw-a380x/src/systems/instruments/src/ND/oans-styles.scss
+++ b/fbw-a380x/src/systems/instruments/src/ND/oans-styles.scss
@@ -121,6 +121,7 @@
 
 .oanc-label-style-runway-end-fms-selected {
   font-size: 0px;
+  color: transparent;
   width: 0px;
   height: 0px;
   background-color: transparent;
@@ -135,6 +136,7 @@
 
 .oanc-label-style-runway-arrow-btv-selected {
   font-size: 0px;
+  color: transparent;
   width: 50px;
   height: 35px;
   background-color: transparent;
