--- a/fbw-a32nx/src/systems/instruments/src/HUD/style.scss
+++ b/fbw-a32nx/src/systems/instruments/src/HUD/style.scss
@@ -11,8 +11,8 @@
 
 .hud-svg {
   position: absolute;
-  width: 768px;
-  height: 768px;
+  width: 1280x;
+  height: 1024px;
   background: $display-background;
   font-family: "Ecam", monospace !important;
 }
