--- a/fbw-a380x/src/systems/instruments/src/PFD/animations.scss
+++ b/fbw-a380x/src/systems/instruments/src/PFD/animations.scss
@@ -5,12 +5,19 @@
   100% {opacity: 1;}
 }
 
+@keyframes pulsing {
+  0% {opacity: 0;}
+  50% {opacity: 0;}
+  51% {opacity: 1;}
+  100% {opacity: 1;}
+}
+
 @mixin GenericPulsingStroke($color, $name) {
   @keyframes #{$name} {
-    0% {stroke: scale-color($color, $lightness: -30%);}
-    50% {stroke: scale-color($color, $lightness: -30%);}
-    51% {stroke: scale-color($color, $lightness: 30%);}
-    100% {stroke: scale-color($color, $lightness: 30%);}
+    0% {stroke: scale-color($color, $lightness: -50%);}
+    50% {stroke: scale-color($color, $lightness: -50%);}
+    51% {stroke: scale-color($color, $lightness: 50%);}
+    100% {stroke: scale-color($color, $lightness: 50%);}
   }
   animation-name: $name;
 }
@@ -67,5 +74,11 @@
 .InnerMarkerBlink {
   animation-name: blinking;
   animation-duration: 200ms;
+  animation-iteration-count: infinite;
+}
+
+.RwyAheadAnimation {
+  @include GenericPulsingStroke($display-yellow, pulse-yellow-stroke);
+  animation-duration: 1s;
   animation-iteration-count: infinite;
 }
