Disable second ISIS; update colors for PFD tapes, PFD horizon, EWD THR gauges

--- a/fbw-a380x/src/systems/instruments/src/PFD/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/PFD/style.scss
@@ -244,19 +244,20 @@ text.Red {
 }
 
 .EarthFill {
-  fill: #9c480c;
+  fill: #5D2518;
 }
 .SkyFill {
-  fill: #0698ff;
+  fill: #0073DE;
 }
 .BlackFill {
   fill: $display-background;
 }
 
 .TapeBackground {
-  fill: $display-grey;
+  fill: #4A5071;
   stroke: none;
 }
+
 .BackgroundFill {
   fill: $display-background;
   stroke: none;
