[OANS] stop lines & labels

--- a/fbw-a380x/src/systems/instruments/src/ND/oans-styles.scss
+++ b/fbw-a380x/src/systems/instruments/src/ND/oans-styles.scss
@@ -121,7 +121,6 @@
 
 .oanc-label-style-runway-end-fms-selected {
   font-size: 0px;
-  color: transparent;
   width: 0px;
   height: 0px;
   background-color: transparent;
@@ -136,7 +135,6 @@
 
 .oanc-label-style-runway-arrow-btv-selected {
   font-size: 0px;
-  color: transparent;
   width: 50px;
   height: 35px;
   background-color: transparent;
@@ -151,6 +149,14 @@
 
 .oanc-label-style-runway-axis {
   color: $display-white;
+}
+
+.oanc-label-style-btv-stop-line {
+  color: $display-magenta;
+}
+
+.oanc-label-style-btv-stop-line:hover {
+  outline: 0px;
 }
 
 .oanc-button {
