[OANS] various small fixes
(cherry picked from commit d815cd1ecb1500f62d1b40ce4c7f7b7243e00321)

--- a/fbw-a380x/src/systems/instruments/src/ND/oans-styles.scss
+++ b/fbw-a380x/src/systems/instruments/src/ND/oans-styles.scss
@@ -101,6 +101,8 @@
 }
 
 .oanc-label-style-runway-end:hover {
+  outline: 3px solid $display-cyan;
+  pointer-events: auto;
   outline-offset: 0px !important;
 }
 
@@ -126,7 +128,8 @@
 }
 
 .oanc-label-style-runway-end-fms-selected {
-  font-size: 0px;
+  font-size: 0.1px;
+  color: transparent;
   width: 0px;
   height: 0px;
   background-color: transparent;
@@ -140,7 +143,8 @@
 }
 
 .oanc-label-style-runway-arrow-btv-selected {
-  font-size: 0px;
+  font-size: 0.1px;
+  color: transparent;
   width: 50px;
   height: 35px;
   background-color: transparent;
