--- a/fbw-a380x/src/systems/instruments/src/MsfsAvionicsCommon/definitions.scss
+++ b/fbw-a380x/src/systems/instruments/src/MsfsAvionicsCommon/definitions.scss
@@ -9,6 +9,8 @@ $font-size-title: 24px;
 $display-white: #ffffff;
 $display-grey: #787878;
 $display-amber: #e68000;
+$display-dark-grey: #b3b3b3;
+$display-light-grey: lightgray;
 $display-cyan: #00ffff;
 $display-green: #00ff00;
 $display-magenta: #ff94ff;
