consolidate to single definitions.scss, use standard colors for thrust gauge and PFD tapes

--- a/fbw-a380x/src/systems/instruments/src/PFD/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/PFD/style.scss
@@ -1,4 +1,4 @@
-@import "shared/definitions";
+@import "../Common/definitions";
 @import "animations";
 
 @font-face {
@@ -254,7 +254,7 @@ text.Red {
 }
 
 .TapeBackground {
-  fill: #4A5071;
+  fill: $display-grey;
   stroke: none;
 }
 
