add "ARPT NOT IN ACTIVE F/PLN" message in OANS layer

--- a/fbw-a380x/src/systems/instruments/src/ND/oans-styles.scss
+++ b/fbw-a380x/src/systems/instruments/src/ND/oans-styles.scss
@@ -305,6 +305,15 @@
   top: 31px;
 }
 
+.oanc-airport-not-in-active-fpln {
+  position: absolute;
+  right: 310px;
+  color: $display-white;
+  background-color: $display-background;
+  text-align: center;
+  font-size: 20px;
+}
+
 .oanc-airplane-shadow {
   stroke: $display-background;
   stroke-width: 10px;
