--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
@@ -401,6 +401,10 @@
   background: $display-yellow;
 }
 
+.mfd-radio-button.green input[type="radio"]:checked {
+  background: $display-green;
+}
+
 .mfd-radio-button input[type="radio"]:disabled {
   background: $display-grey !important;
 }
@@ -417,6 +421,10 @@
 
 .mfd-radio-button.tmpy input[type="radio"]:checked ~ * {
   color: $display-yellow;
+}
+
+.mfd-radio-button.green input[type="radio"]:checked ~ * {
+  color: $display-green;
 }
 
 .mfd-radio-button input[type="radio"]:disabled ~ * {
