--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/SURV/MfdSurvControls.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/SURV/MfdSurvControls.scss
@@ -7,7 +7,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
-  padding-bottom: 15px;
+  margin-bottom: 10px;
   border-bottom: 2px solid $display-light-grey;
 }
 
@@ -18,7 +18,6 @@
   justify-content: space-between;
   align-items: flex-start;
   padding-bottom: 15px;
-  border-bottom: 2px solid $display-light-grey;
 }
 
 .mfd-surv-controls-third-section {
@@ -27,5 +26,123 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
-  padding-top: 20px;
+  margin-top: 15px;
+  border-top: 2px solid $display-light-grey;
+}
+
+.mfd-surv-controls-xpdr-section {
+  width: 40%;
+  display: flex;
+  flex-direction: row;
+  border-right: 2px solid lightgrey;
+  margin-left: 5px;
+}
+
+.mfd-surv-controls-xpdr-left {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.mfd-surv-controls-xpdr-right {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+  padding-right: 20px;
+}
+
+.mfd-surv-controls-tcas-section {
+  width: 60%;
+  display: flex;
+  flex-direction: row;
+  border-right: 2px solid lightgrey;
+  margin-left: 5px;
+  padding-top: 75px;
+}
+
+.mfd-surv-controls-tcas-left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-right: 40px;
+  margin-right: 5px;
+  border-right: 2px solid lightgrey;
+}
+
+.mfd-surv-controls-tcas-right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.mfd-surv-controls-wxr-left {
+  width: 30%;
+  display: flex;
+  margin-left: 5px;
+  flex-direction: column;
+  flex: 1;
+  align-items: center;
+}
+
+.mfd-surv-controls-wxr-right {
+  width: 70%;
+  display: flex;
+  flex-direction: row;
+  margin-left: 5px;
+  padding-top: 30px;
+  align-items: center;
+  justify-content: center;
+}
+
+.mfd-surv-controls-wxr-grid {
+  display: grid;
+  grid-template-columns: auto auto auto;
+}
+
+.mfd-surv-controls-wxr-grid-cell {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+}
+
+.mfd-surv-controls-taws-section {
+  display: flex;
+  height: 205px;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+  border-right: 2px solid lightgrey;
+}
+
+.mfd-surv-controls-taws-element {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  margin: 10px;
+  height: 125px;
+}
+
+.mfd-surv-controls-def-settings-container {
+  display: flex;
+  height: 200px;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.mfd-surv-controls-def-settings {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  margin: 10px;
+  height: 125px;
 }
