--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
@@ -705,3 +705,37 @@
   display: flex;
   flex-direction: column;
 }
+
+.mfd-surv-heading {
+  font-size: 28px;
+  color: $display-white;
+  font-family: "Ecam", monospace;
+}
+
+.mfd-surv-heading.failed {
+  color: $display-amber;
+}
+
+.mfd-surv-button {
+  border: 4px inset lightgrey;
+  display: flex;
+  flex-direction: column;
+  width: 100px;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  height: 65px;
+}
+
+.mfd-surv-button.disabled {
+  background-color: $display-grey;
+  border: none;
+}
+
+.mfd-surv-label {
+  font-size: 20px;
+  color: $display-white;
+  font-family: "Ecam", monospace;
+  text-align: center;
+  margin-bottom: 2px;
+}
