--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
@@ -393,16 +393,23 @@
 
 
 .mfd-radio-button input[type="radio"]:checked {
-  background: $display-cyan;
   box-shadow: inset 0 0 0px 4px black;
 }
 
-.mfd-radio-button.tmpy input[type="radio"]:checked {
+.mfd-radio-button.yellow input[type="radio"]:checked {
   background: $display-yellow;
 }
 
 .mfd-radio-button.green input[type="radio"]:checked {
   background: $display-green;
+}
+
+.mfd-radio-button.white input[type="radio"]:checked {
+  background: $display-white;
+}
+
+.mfd-radio-button.cyan input[type="radio"]:checked {
+  background: $display-cyan;
 }
 
 .mfd-radio-button input[type="radio"]:disabled {
@@ -419,12 +426,20 @@
   color: $display-cyan;
 }
 
-.mfd-radio-button.tmpy input[type="radio"]:checked ~ * {
+.mfd-radio-button.yellow input[type="radio"]:checked ~ * {
   color: $display-yellow;
 }
 
 .mfd-radio-button.green input[type="radio"]:checked ~ * {
   color: $display-green;
+}
+
+.mfd-radio-button.white input[type="radio"]:checked ~ * {
+  color: $display-white;
+}
+
+.mfd-radio-button.cyan input[type="radio"]:checked ~ * {
+  color: $display-cyan;
 }
 
 .mfd-radio-button input[type="radio"]:disabled ~ * {
