--- a/fbw-a380x/src/systems/instruments/src/PFD/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/PFD/style.scss
@@ -148,6 +148,10 @@ text.Magenta {
   fill: $display-magenta;
   stroke: none;
 }
+tspan.Magenta {
+  fill: $display-magenta;
+  stroke: none;
+}
 
 .Cyan {
   fill: none;
@@ -187,6 +191,10 @@ text.White {
   fill: $display-white;
   stroke: none;
 }
+tspan.White {
+  fill: $display-white;
+  stroke: none;
+}
 
 .Green {
   stroke: $display-green;
@@ -202,12 +210,20 @@ text.Green {
   fill: $display-green;
   stroke: none;
 }
+tspan.Green {
+  fill: $display-green;
+  stroke: none;
+}
 
 .Amber {
   stroke: $display-amber;
   fill: none;
 }
 text.Amber {
+  fill: $display-amber;
+  stroke: none;
+}
+tspan.Amber {
   fill: $display-amber;
   stroke: none;
 }
@@ -224,6 +240,10 @@ text.Yellow {
   fill: $display-yellow;
   stroke: none;
 }
+tspan.Yellow {
+  fill: $display-yellow;
+  stroke: none;
+}
 
 .Red {
   stroke: $display-red;
@@ -234,6 +254,10 @@ text.Yellow {
   stroke: none;
 }
 text.Red {
+  fill: $display-red;
+  stroke: none;
+}
+tspan.Red {
   fill: $display-red;
   stroke: none;
 }
