--- a/fbw-a380x/src/systems/instruments/src/MsfsAvionicsCommon/definitions.scss
+++ b/fbw-a380x/src/systems/instruments/src/MsfsAvionicsCommon/definitions.scss
@@ -7,7 +7,7 @@ $font-size-huge: 22px;
 $font-size-title: 24px;
 
 $display-white: #ffffff;
-$display-grey: #787878;
+$display-grey: #4A5071;
 $display-amber: #e68000;
 $display-dark-grey: #b3b3b3;
 $display-light-grey: lightgray;
