--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/FMS/F-PLN/MfdFmsFpln.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/FMS/F-PLN/MfdFmsFpln.scss
@@ -284,7 +284,7 @@
 }
 
 .mfd-fms-fpln-duplicate-outline {
-  border: 2px solid $display-grey;
+  border: 2px solid $display-dark-grey;
   height: 60%;
 }
 
@@ -318,7 +318,7 @@
 }
 
 .mfd-fms-fpln-duplicate-table-row > div.sel {
-  background-color: $display-grey;
+  background-color: $display-dark-grey;
 }
 
 .mfd-fms-bottom-button-row {
