--- a/fbw-a380x/src/systems/instruments/src/MsfsAvionicsCommon/definitions.scss
+++ b/fbw-a380x/src/systems/instruments/src/MsfsAvionicsCommon/definitions.scss
@@ -7,10 +7,10 @@ $font-size-huge: 22px;
 $font-size-title: 24px;
 
 $display-white: #ffffff;
-$display-grey: #4A5071;
+$display-grey: #4a5071;
 $display-amber: #e68000;
-$display-dark-grey: #b3b3b3;
-$display-light-grey: lightgray;
+$display-dark-grey: #868a9c;
+$display-light-grey: #c4c6cf;
 $display-cyan: #00ffff;
 $display-green: #00ff00;
 $display-magenta: #ff94ff;
