refactor checklists, reduce boilerplate

--- a/fbw-a380x/src/systems/instruments/src/EWD/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/EWD/style.scss
@@ -373,11 +373,11 @@ text, tspan, span {
   color: $display-cyan;
 }
 
-.EclLine.ChecklistMenuItem {
+.EclLine.ChecklistItem {
   color: $display-cyan;
 }
 
-.EclLine.ChecklistMenuItem.Checked {
+.EclLine.ChecklistItem.Checked {
   color: $display-green;
 }
 
